<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fragment_profile_gh_h0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.29" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fragment_profile_gh_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/fragment_profile_iv_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorBackgroundCard"
        app:layout_constraintBottom_toTopOf="@id/fragment_profile_gh_h0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/fragment_profile_iv_profile"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginStart="30dp"
        android:src="@drawable/sisters_of_mercy_by_nanfe_da6h71u"
        app:layout_constraintBottom_toTopOf="@id/fragment_profile_gh_h1"
        app:layout_constraintEnd_toStartOf="@id/fragment_profile_tv_Testing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        android:layout_marginBottom="20dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_profile_tv_Testing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="5dp"
        android:text="@string/testing"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/fragment_profile_gh_h0"
        app:layout_constraintStart_toEndOf="@id/fragment_profile_iv_profile"
        />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_profile_tv_Close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/cerrar_sesi_n"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/fragment_profile_gh_h0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fragment_profile_tv_Testing" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_profile_tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/email"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/fragment_profile_iv_profile"
        app:layout_constraintTop_toBottomOf="@id/fragment_profile_gh_h0" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_profile_tv_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorites"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/fragment_profile_cv_favoriteFood"
        app:layout_constraintEnd_toEndOf="@id/fragment_profile_iv_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_profile_iv_profile"
        android:layout_marginBottom="15dp"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/fragment_profile_cv_favoriteFood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/fragment_profile_tv_favorites"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/fragment_profile_iv_favorite"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:src="@drawable/enchiladas"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/fragment_profile_tv_favorite"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/favorite_user_food_image" />

            <TextView
                android:id="@+id/fragment_profile_tv_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/enchiladas"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/fragment_profile_iv_favorite"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>